Replace getId() with threadId()